@@ -1,3 +1,5 @@
+* Pass event object to EventObserver callbacks. [Prototype LH #150] [jddalton, Morus Walter]
+
 * Confirm fuse.String#match and fuse.RegExp#exec don't return sparse arrays in Opera 9.25 or Safari 3.x. [Prototype LH #946] [jay, jddalton]
 
 * Avoid setting style overflow via cssText in setStyle() because it causes bugs in IE and Konqueror. [jddalton, kangax]
